--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -24,6 +24,7 @@
                 <option value="recipe_posted">Date</option>
                 <option value="calories_per_serving">Calories</option>
                 <option value="price_per_serving">Price</option>
+                <option value="preparation_time">Preparation time</option>
             </select>
         </div>
         <div class="col-3 mx-auto">
