--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -29,6 +29,7 @@
         </div>
         <div class="col-3 mx-auto">
             <div class="form-check form-check-inline">
+                <!-- Check this warnings, how to make it work legal way? -->
                 <input class="form-check-input" type="radio" name="ord" id="desc" value="desc" {{desc}}>
                 <label class="form-check-label" for="desc">
                 Descending
