--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -64,7 +64,11 @@
                   <p>{{recipe.recipe_posted}}</p>
                   <p class="card-text text-muted">Caloric value : <b>{{ recipe.calories_per_serving}}</b> cal/serving</p>
                   <p class="card-text text-muted">Price : <b>{{recipe.price_per_serving}}</b> pln/serving</p>
-                  {% if recipe.height_field|add:100  >  recipe.width_field %}
+                  <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
+                  <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
+                    </svg> {{recipe.preparation_time}} min</p>
+                  {% if recipe.height_field  >  recipe.width_field %}
                   <div class="container" style="position:absolute; bottom:20px;">
                       <a href="/recipes/{{recipe.recipe_slug}}"><button type="button" class="btn btn-outline-info">See details</button></a>
                       {% if currentuser == recipe.user %}
