--- a/main/templates/main/homepage.html
+++ b/main/templates/main/homepage.html
@@ -1,7 +1,7 @@
 {% extends "main/base.html" %}
 
 {% block content %}
-<!-- TODO add some screens to break this wall of text -->
+<!-- TODO add some screens to break this wall of text and turn them into hover-able buttons -->
 
 <div class="jumbotron mt-5">
   <h1 class="display-4 mb-5 text-center">Meal configurator</h1>
