First attempt to diagnose bug resulting in err 500

--- a/main/templates/main/product_details.html
+++ b/main/templates/main/product_details.html
@@ -6,7 +6,7 @@
   <br>
   {% if not product.accepted %}
     <div class="col-sm-12">
-        <div class="alert alert-danger my-5">This ingredient has not been yet accepted by the admin, so it won't be displayed on a main page. However you can still add it to your recipe.</div>
+        <div class="alert alert-danger my-5">This ingredient has not been yet accepted by the admin, so it won't be displayed on a main page. However, you can still add it to your recipe.</div>
     </div>
   {% endif %}
   <div class="card mx-auto" style="width: 50rem;">
