--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -10,7 +10,7 @@
 
     <div class="col-8 mx-auto">
 
-    <img src="{% static 'main/recipee.jpg' %}" class="img-fluid mb-2">
+    <img src="{% static 'main/recipee.jpg' %}" class="img-fluid mb-2" style="border-radius: 20px;">
     {% if title %}
         <h1 style="position: absolute; top:0; right:0; left:0; margin:auto;" class="text-center mt-1">{{ title }}</h1>
     {% endif %}
