--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -46,7 +46,7 @@
     </ul>
     <br>
     <ul class="list-group">
-        <li class="list-group-item text-center"><strong>Macronutrients profile</strong></li>
+        <li class="list-group-item text-center"><strong>Macronutrients profile [1 serving]</strong></li>
         <li class="list-group-item"><canvas id="myChart" width="10" height="10"></canvas></li>
     </ul>
 </div>
