--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -8,232 +8,151 @@
 
 {% block content %}
 
-    <div class="col-8 mx-auto">
+<div class="col-12 col-md-10 col-lg-9 col-xl-8 mx-auto">
 
-    <img src="{% static 'main/recipee.jpg' %}" class="img-fluid mb-2" style="border-radius: 20px;">
-    {% if title %}
-        <h1 style="position: absolute; top:0; right:0; left:0; margin:auto;" class="text-center mt-1">{{ title }}</h1>
-    {% endif %}
+<img src="{% static 'main/recipee.jpg' %}" class="img-fluid mb-2" style="border-radius: 20px;">
+{% if title %}
+    <h1 style="position: absolute; top:0; right:0; left:0; margin:auto;" class="text-center mt-1">{{ title }}</h1>
+{% endif %}
 
-    <br>
+<br>
 
-    <form method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
+<form method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
 
-            {% if form.non_field_errors %}
-                <div class="alert alert-danger" role="alert">
-                  {% for error in form.non_field_errors %}
-                    {{ error }}
-                  {% endfor %}
-                </div>
-            {% endif %}
+        {% if form.non_field_errors %}
+            <div class="alert alert-danger" role="alert">
+              {% for error in form.non_field_errors %}
+                {{ error }}
+              {% endfor %}
+            </div>
+        {% endif %}
 
-            <div class="fieldWrapper mb-3">
-                <h4>{{ form.recipe_name.label_tag }}</h4>
-                {% if form.is_bound %}
-                    {% if form.recipe_name.errors %}
-                        {% render_field form.recipe_name class="form-control is-invalid" %}
-                        {% for error in form.recipe_name.errors %}
-                            <div class="invalid-feedback">
-                              {{ error }}
-                            </div>
-                        {% endfor %}
-                    {% else %}
-                        {% render_field form.recipe_name class="form-control is-valid" %}
-                    {% endif %}
+        <div class="fieldWrapper mb-3">
+            <h4>{{ form.recipe_name.label_tag }}</h4>
+            {% if form.is_bound %}
+                {% if form.recipe_name.errors %}
+                    {% render_field form.recipe_name class="form-control is-invalid" %}
+                    {% for error in form.recipe_name.errors %}
+                        <div class="invalid-feedback">
+                          {{ error }}
+                        </div>
+                    {% endfor %}
                 {% else %}
-                    {% render_field form.recipe_name class="form-control" %}
+                    {% render_field form.recipe_name class="form-control is-valid" %}
                 {% endif %}
-            </div>
-
-
-            <div class="fieldWrapper mb-2">
-                <h4>Image and additional info:</h4>
-                {{ form.recipe_image|as_crispy_field}}
-            </div>
-
-            <div class="fieldWrapper mb-2">
-                <div class="row">
-
-                    <div class="col">
-                        {{ form.preparation_time|as_crispy_field}}
-                    </div>
-
-                    <div class="col">
-                        <!-- I would never guessed it... crispy form just replaced only this one field i need special help with -->
-                        {% crispy form %}
-
-                    </div>
-
-                </div>
-            </div>
-
-
-
-            <h4>List of ingredients:</h4>
-            <div class="alert alert-info" role="alert">
-                Add ingredients by browsing <a href="/products" class="alert-link">food cards</a> or use multiple choice menu below.
-            </div>
-
-            {{ formset.management_form }}
-            {% if formset.non_form_errors %}
-                <div class="alert alert-danger" role="alert">
-                  {% for error in formset.non_form_errors %}
-                    {{ error }}
-                  {% endfor %}
-                </div>
+            {% else %}
+                {% render_field form.recipe_name class="form-control" %}
             {% endif %}
+        </div>
 
-            {% for form in formset %}
-            <div class="row form-row spacer">
-                <div class="col-3">
-                    {{form.ingredient|as_crispy_field}}
+
+        <div class="fieldWrapper mb-2">
+            <h4>Image and additional info:</h4>
+            {{ form.recipe_image|as_crispy_field}}
+        </div>
+
+        <div class="fieldWrapper mb-2">
+            <div class="row">
+
+                <div class="col-12 col-sm">
+                    {{ form.preparation_time|as_crispy_field}}
                 </div>
-                <div class="col-4">
-                    <div class="input-group">
 
-                        {% if form.is_bound %}
-                            {% if form.quantity.errors %}
-                                {% render_field form.quantity class="form-control is-invalid" %}
-                                {% for error in form.quantity.errors %}
-                                    <div class="input-group-append">
-                                        <button class="btn btn-danger remove-form-row">-</button>
-                                    </div>
-                                    <div class="invalid-feedback">
-                                        {{ error }}
-                                    </div>
-                                {% endfor %}
-                            {% else %}
-                                {% render_field form.quantity class="form-control is-valid" %}
+                <div class="col-12 col-sm">
+                    {% crispy form %}
+                </div>
+
+            </div>
+        </div>
+
+        <h4>List of ingredients:</h4>
+        <div class="alert alert-info" role="alert">
+            Add ingredients by browsing <a href="/products" class="alert-link">food cards</a> or use multiple choice menu below.
+            You can also <a href="/products/add" class="alert-link">create</a> a new one.
+        </div>
+
+        {{ formset.management_form }}
+        {% if formset.non_form_errors %}
+            <div class="alert alert-danger" role="alert">
+              {% for error in formset.non_form_errors %}
+                {{ error }}
+              {% endfor %}
+            </div>
+        {% endif %}
+
+        {% for form in formset %}
+        <div class="row form-row spacer">
+            <div class="col-7 col-sm-5 col-lg-5">
+                {{form.ingredient|as_crispy_field}}
+            </div>
+            <div class="col-5 col-sm-4 col-lg-4">
+                <div class="input-group">
+
+                    {% if form.is_bound %}
+                        {% if form.quantity.errors %}
+                            {% render_field form.quantity class="form-control is-invalid" %}
+                            {% for error in form.quantity.errors %}
                                 <div class="input-group-append">
                                     <button class="btn btn-danger remove-form-row">-</button>
                                 </div>
-                            {% endif %}
+                                <div class="invalid-feedback">
+                                    {{ error }}
+                                </div>
+                            {% endfor %}
                         {% else %}
-                            {% render_field form.quantity class="form-control" %}
-                            {% if form.ingredient.value in added %}
-                                <div class="input-group-append">
-                                    <button class="btn btn-danger remove-form-row">-</button>
-                                </div>
-                            {% else %}
-                                <div class="input-group-append">
-                                    <button  class="btn btn-success add-form-row">+</button>
-                                </div>
-                            {% endif %}
+                            {% render_field form.quantity class="form-control is-valid" %}
+                            <div class="input-group-append">
+                                <button class="btn btn-danger remove-form-row">-</button>
+                            </div>
                         {% endif %}
+                    {% else %}
+                        {% render_field form.quantity class="form-control" %}
+                        {% if form.ingredient.value in added %}
+                            <div class="input-group-append">
+                                <button class="btn btn-danger remove-form-row">-</button>
+                            </div>
+                        {% else %}
+                            <div class="input-group-append">
+                                <button  class="btn btn-success add-form-row">+</button>
+                            </div>
+                        {% endif %}
+                    {% endif %}
 
-                    </div>
                 </div>
             </div>
-            {% endfor %}
+        </div>
+        {% endfor %}
 
 
 
-            <div class="fieldWrapper">
-                <h4>{{ form.directions.label_tag }}</h4>
-                {% if form.is_bound %}
-                    {% if form.directions.errors %}
-                        {% for error in form.directions.errors%}
-                            <div class="alert alert-danger my-2" role="alert">
-                                {{ error }}
-                            </div>
-                            {{ form.directions }}
-                        {% endfor %}
-                    {% else %}
+        <div class="fieldWrapper">
+            <h4>{{ form.directions.label_tag }}</h4>
+            {% if form.is_bound %}
+                {% if form.directions.errors %}
+                    {% for error in form.directions.errors%}
+                        <div class="alert alert-danger my-2" role="alert">
+                            {{ error }}
+                        </div>
                         {{ form.directions }}
-                    {% endif %}
+                    {% endfor %}
                 {% else %}
                     {{ form.directions }}
-                {% endif%}
-            </div>
+                {% endif %}
+            {% else %}
+                {{ form.directions }}
+            {% endif%}
+        </div>
+
+    {%  if title == 'Edit Recipe'%}
         <button type="submit" class="btn btn-primary my-3">Save</button>
-        <!--{%  if title == 'Edit Recipe'%}
-
-        {% else %}
+    {% else %}
         <button type="submit" class="btn btn-primary my-3">Create</button>
-       {% endif %}-->
-    </form>
+    {% endif %}
+</form>
+</div>
 
-    </div>
-    <script>
-      function updateSession() {
-        var fields = $( ":input" ).serializeArray();
-        let updateING = '';
-        jQuery.each( fields, function( i, field ) {
-            if(i>5 && i!=(fields.length-1) && field.value!='' && isNaN(field.value)){
-                updateING = updateING + "#" + field.value;
-                console.log(updateING);
-            }
-        });
-        var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-
-        function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        }
-        $.ajaxSetup({
-            beforeSend: function (xhr, settings) {
-                // if not safe, set csrftoken
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                }
-            }
-        });
-        $.ajax({
-            headers: {'X-CSRFToken': csrftoken},
-            type: "POST",
-            url: '/updateSS/',
-            data: {'ingredients': updateING},
-            success: function(data){
-                                    console.log(data)
-                                    },
-            error: function(error_data){
-                                        console.log(error_data)
-                                        console.log('WTF?')
-                                        }
-        })
-      }
-      $( "select" ).change( updateSession );
-      $(document).on('click', '.remove-form-row', updateSession);
-      updateSession();
-
-      function updateOptionss(){
-        $.get('/updateOP/', function(data){
-                                    $('select:last').html(data)
-                                    } );
-      }
-
-
-      function updateOptions(){
-      var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-
-        function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        }
-        $.ajaxSetup({
-            beforeSend: function (xhr, settings) {
-                // if not safe, set csrftoken
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                }
-            }
-        });
-        $.ajax({
-            headers: {'X-CSRFToken': csrftoken},
-            type: "GET",
-            url: '/updateOP/',
-            data: {},
-            success: function(data){
-                                    $('select:last').html(data)
-                                    console.log(data)
-                                    },
-            error: function(error_data){
-                                        console.log(error_data)
-                                        }
-        })
-      }
-      $(document).on('click', '.add-form-row', updateOptions);
-      $(document).on('click', '.remove-form-row', updateOptions);
-    </script>
+<!--Script managing dynamic adding/removing formset rows. Second functionality is to modify new formset queryset
+    to exclude already chosen ingredients. Corresponding views: update_session and update_options. -->
+<script src="{% static 'js/recipeForm.js' %}"></script>
 
 {% endblock %}
