--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -91,9 +91,9 @@
             </div>
         {%  endif %}
 
-    </div>
+</div>
 
-<script>
+<script type="text/javascript">
 var ctx = document.getElementById('myChart').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'doughnut',
