--- a/main/templates/main/contact_form.html
+++ b/main/templates/main/contact_form.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-    <div class="col-6 mx-auto mt-3">
+    <div class="col mx-auto mt-3" style="max-width: 40rem;">
 
     {% if title %}
-        <h1>{{ title }}</h1>
+        <h1 class="mt-5 text-center">{{ title }}</h1>
     {% endif %}
     <form method="POST" action="."> {% csrf_token %}
 
